# blender_bevy_top_down_space_shooter

./: .gitignore  Cargo.toml  Makefile
assets_src/: Level1.blend  Player.blend
assets_src/Levels/: Level1.blend
assets_src/Levels/Tilesets/: ConcreteWalls.blend
assets_src/Particles/: Particles.blend
assets_src/PlayerShip/: Player.blend
assets_src/Tilesets/: ConcreteWalls.blend
assets_src/component_definitions/: README.md  engine_flare.json  player.json  spaceship.json
blender_bevy_toolkit/scripts/: export.py  pylint_in_blender.py  pytest_in_blender.py
game/: Cargo.toml
game/assets/scenes/: Level1.scn  Particles.scn  Player.scn
game/src/: main.rs  player.rs  ship.rs
