[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version="0.6.0"
features = ["dynamic"]

[dependencies.bevy_rapier3d]
version="0.12.1"

[dependencies.blender_bevy_toolkit]
path='../blender_bevy_toolkit'
